# P1_project

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflow/: github-actions.yml
.github/workflows/: main.yml
Google_tests/: CMakeLists.txt  test_main.cpp
Google_tests/integration_test/: integration_test.cpp
Google_tests/smoke_test/: smoke_test.cpp
Google_tests/unit_test/: unit_test.cpp
src/: main.cpp
src/graph/: graph_service.cpp  graph_service.h
